build/log/idf_py_stdout_output_12504
[1/9] Building C object esp-idf/data_storage/CMakeFiles/__idf_data_storage.dir/dplock_data_storage.c.obj
FAILED: esp-idf/data_storage/CMakeFiles/__idf_data_storage.dir/dplock_data_storage.c.obj 
/home/csalitre/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/csalitre/School/senior-design/dplock/build/config -I/home/csalitre/School/senior-design/dplock/components/data_storage/include -I/home/csalitre/esp/v5.3/esp-idf/components/newlib/platform_include -I/home/csalitre/esp/v5.3/esp-idf/components/freertos/config/include -I/home/csalitre/esp/v5.3/esp-idf/components/freertos/config/include/freertos -I/home/csalitre/esp/v5.3/esp-idf/components/freertos/config/xtensa/include -I/home/csalitre/esp/v5.3/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/csalitre/esp/v5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/csalitre/esp/v5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/csalitre/esp/v5.3/esp-idf/components/freertos/esp_additions/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_hw_support/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_hw_support/include/soc -I/home/csalitre/esp/v5.3/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/csalitre/esp/v5.3/esp-idf/components/esp_hw_support/dma/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_hw_support/ldo/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/csalitre/esp/v5.3/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/csalitre/esp/v5.3/esp-idf/components/heap/include -I/home/csalitre/esp/v5.3/esp-idf/components/log/include -I/home/csalitre/esp/v5.3/esp-idf/components/soc/include -I/home/csalitre/esp/v5.3/esp-idf/components/soc/esp32s3 -I/home/csalitre/esp/v5.3/esp-idf/components/soc/esp32s3/include -I/home/csalitre/esp/v5.3/esp-idf/components/hal/platform_port/include -I/home/csalitre/esp/v5.3/esp-idf/components/hal/esp32s3/include -I/home/csalitre/esp/v5.3/esp-idf/components/hal/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_rom/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_rom/include/esp32s3 -I/home/csalitre/esp/v5.3/esp-idf/components/esp_rom/esp32s3 -I/home/csalitre/esp/v5.3/esp-idf/components/esp_common/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_system/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_system/port/soc -I/home/csalitre/esp/v5.3/esp-idf/components/esp_system/port/include/private -I/home/csalitre/esp/v5.3/esp-idf/components/xtensa/esp32s3/include -I/home/csalitre/esp/v5.3/esp-idf/components/xtensa/include -I/home/csalitre/esp/v5.3/esp-idf/components/xtensa/deprecated_include -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/include -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/include/apps -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/include/apps/sntp -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/lwip/src/include -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/port/include -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/port/freertos/include -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/port/esp32xx/include -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/csalitre/esp/v5.3/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/csalitre/esp/v5.3/esp-idf/components/nvs_flash/include -I/home/csalitre/esp/v5.3/esp-idf/components/spi_flash/include -I/home/csalitre/esp/v5.3/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/csalitre/School/senior-design/dplock=. -fmacro-prefix-map=/home/csalitre/esp/v5.3/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/data_storage/CMakeFiles/__idf_data_storage.dir/dplock_data_storage.c.obj -MF esp-idf/data_storage/CMakeFiles/__idf_data_storage.dir/dplock_data_storage.c.obj.d -o esp-idf/data_storage/CMakeFiles/__idf_data_storage.dir/dplock_data_storage.c.obj -c /home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c
/home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c:100:51: error: argument 1 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=]
  100 | void dplock_add_authorized_device(const bd_addr_t bd_addr) {
      |                                   ~~~~~~~~~~~~~~~~^~~~~~~
In file included from /home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c:1:
/home/csalitre/School/senior-design/dplock/components/data_storage/include/dplock_data_storage.h:70:50: note: previously declared as 'const uint8_t *' {aka 'const unsigned char *'}
   70 | void dplock_add_authorized_device(const uint8_t *bd_addr);
      |                                   ~~~~~~~~~~~~~~~^~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c:108:50: error: argument 1 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=]
  108 | bool dplock_is_device_authorized(const bd_addr_t bd_addr) {
      |                                  ~~~~~~~~~~~~~~~~^~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/include/dplock_data_storage.h:71:49: note: previously declared as 'const uint8_t *' {aka 'const unsigned char *'}
   71 | void dplock_is_device_authorized(const uint8_t *bd_addrr);
      |                                  ~~~~~~~~~~~~~~~^~~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c:108:6: error: conflicting types for 'dplock_is_device_authorized'; have '_Bool(const uint8_t *)' {aka '_Bool(const unsigned char *)'}
  108 | bool dplock_is_device_authorized(const bd_addr_t bd_addr) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/include/dplock_data_storage.h:71:6: note: previous declaration of 'dplock_is_device_authorized' with type 'void(const uint8_t *)' {aka 'void(const unsigned char *)'}
   71 | void dplock_is_device_authorized(const uint8_t *bd_addrr);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c:117:48: error: argument 1 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=]
  117 | void dplock_start_ble_security(const bd_addr_t bd_addr) {
      |                                ~~~~~~~~~~~~~~~~^~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/include/dplock_data_storage.h:72:47: note: previously declared as 'const uint8_t *' {aka 'const unsigned char *'}
   72 | void dplock_start_ble_security(const uint8_t *bd_addr);
      |                                ~~~~~~~~~~~~~~~^~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c:127:54: error: argument 1 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=]
  127 | void dplock_remove_authorized_device(const bd_addr_t bd_addr) {
      |                                      ~~~~~~~~~~~~~~~~^~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/include/dplock_data_storage.h:74:47: note: previously declared as 'uint8_t *' {aka 'unsigned char *'}
   74 | void dplock_remove_authorized_device(uint8_t *bd_addr);
      |                                      ~~~~~~~~~^~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/dplock_data_storage.c:127:6: error: conflicting types for 'dplock_remove_authorized_device'; have 'void(const uint8_t *)' {aka 'void(const unsigned char *)'}
  127 | void dplock_remove_authorized_device(const bd_addr_t bd_addr) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/csalitre/School/senior-design/dplock/components/data_storage/include/dplock_data_storage.h:74:6: note: previous declaration of 'dplock_remove_authorized_device' with type 'void(uint8_t *)' {aka 'void(unsigned char *)'}
   74 | void dplock_remove_authorized_device(uint8_t *bd_addr);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/csalitre/School/senior-design/dplock/build/bootloader/esp-idf/esptool_py && /home/csalitre/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/csalitre/esp/v5.3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/csalitre/School/senior-design/dplock/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
ninja: build stopped: subcommand failed.
